Final project is complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>src ="myFirstProject.js"</script>
+    <script src="myFirstProject.js"></script>
 </body>
 </html>
